--- a/static/fields/tobaccoproblem.yaml
+++ b/static/fields/tobaccoproblem.yaml
@@ -1,6 +1,6 @@
 properties:
   report_id:
-    description: "7-digit ICSR number (no spaces)."
+    description: "7-digit Individual Case Safety Record (ICSR) number (no spaces)."
     format: integer
     is_exact: false
     possible_values:
@@ -9,16 +9,28 @@ properties:
     description: "Date report was received by CTP; this is the earliest date of report receipt, either to Safety Reporting Portal (SRP) or by other means"
     format: date
     is_exact: false
-    possible_values:
+    pattern: "YYYYmmdd"
     type: string
-  reported_product_problems:
+  number_tobacco_products:
+    description: "System-calculated number of Tobacco Product Problems reported, displayed as a whole number, ≥ 0."
+    format: integer
+    is_exact: false
+    possible_values:
+    type: number
+  tobacco_products:
     type: array
     items:
-      description: "Text reflecting the SRP categorical list of values."
+      description: "Text reflecting the SRP tobacco products selected by the reporter."
       format:
       is_exact: true
       possible_values:
       type: string
+  number_health_problems:
+    description: "System-calculated number of Health Problems (i.e., MedDRA terms selected from a standardized list of symptoms, signs, diagnoses and outcomes) reported, displayed as a whole number, ≥0."
+    format: integer
+    is_exact: false
+    possible_values:
+    type: number
   reported_health_problems:
     type: array
     items:
@@ -27,36 +39,24 @@ properties:
       is_exact: true
       possible_values:
       type: string
-  product_type:
-    type: array
-    items:
-      description: "Text reflecting the SRP tobacco Product Type selected by the reporter."
-      format:
-      is_exact: true
-      possible_values:
-      type: string
-  number_tobacco_products:
-    description: "System-calculated number of Tobacco Product Problems reported, displayed as a whole number, ≥ 0."
-    format: integer
-    is_exact: false
-    possible_values:
-    type: number
-  number_product_problems:
-    description: "System-calculated number of categorical Product Problems reported, displayed as a whole number, ≥0."
-    format: integer
-    is_exact: false
-    possible_values:
-    type: number
-  number_health_problems:
-    description: "System-calculated number of Health Problems (i.e., MedDRA terms selected from a standardized list of symptoms, signs, diagnoses and outcomes) reported, displayed as a whole number, ≥0."
-    format: integer
-    is_exact: false
-    possible_values:
-    type: number
   nonuser_affected:
     description: "Displays text reflecting the response to this optional question (2017 - 12/14/2018) or required question (12/15/2018 onward) as “No information provided” if not answered, or Yes/No."
     format:
     is_exact: false
     possible_values:
     type: string
+  number_product_problems:
+    description: "System-calculated number of categorical Product Problems reported, displayed as a whole number, ≥0."
+    format: integer
+    is_exact: false
+    possible_values:
+    type: number
+  reported_product_problems:
+    type: array
+    items:
+      description: "Text reflecting the SRP categorical list of values."
+      format:
+      is_exact: true
+      possible_values:
+      type: string
 type: object
