--- a/src/constants/fields/tobaccoproblem.yaml
+++ b/src/constants/fields/tobaccoproblem.yaml
@@ -5,8 +5,8 @@ properties:
     is_exact: false
     possible_values:
     type: number
-  submission_date:
-    description: "Date report was received by CTP; this is the earliest date of report receipt, either to Safety Reporting Portal (SRP) or by other means"
+  date_submitted:
+    description: "Date report was received by CTP; this is the earliest date of report receipt, either to Safety Reporting Portal (SRP) or by other means. Date follows format: `YYYYmmdd`."
     format: date
     is_exact: false
     pattern: "YYYYmmdd"
