Removed references to pet food & phish pharm.

--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -88,6 +88,12 @@
   link: /drug/
   collapse: true
   items:
+
+- title: Drug API Endpoints
+  id: drug-api-endpoints
+  link: /drug/
+  collapse: true
+  items:
     - title: Adverse Events
       id: drug-adverse-events
       collapse: true
