--- a/src/pages/data/dataexplorer/_meta.yaml
+++ b/src/pages/data/dataexplorer/_meta.yaml
@@ -1,4 +1,4 @@
-documentTitle: openFDA › Dataset Explorer
+documentTitle: openFDA › Tools › Dataset Explorer
 label: Tools
 title: Dataset Explorer
 description: ""
