--- a/src/pages/data/downloads/_meta.yaml
+++ b/src/pages/data/downloads/_meta.yaml
@@ -1,4 +1,4 @@
-documentTitle: openFDA › Downloads
+documentTitle: openFDA › Tools › Downloads
 label: Endpoint Downloads
 title: Downloads
 description: "This page provides all available endpoint downloads."
