--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -4,10 +4,6 @@
   url: 'http://esridc.github.io/openfda'
 - title: 'Local Alternatives'
   url: 'https://devis18f.herokuapp.com/'
-- title: 'MedCheck'
-  url: 'https://medcheck.octoconsulting.com/#/'
-- title: 'Rxpectations'
-  url: 'http://rxpectations.herokuapp.com/'
 - title: 'Search Food Recalls'
   url: 'https://acumen-gsa-prototype.herokuapp.com/#/search'
 - title: 'ResearchAE'
@@ -16,5 +12,7 @@
   url: 'https://play.google.com/store/apps/details?id=knowrx.knowrx'
 - title: 'TrackMy Implants'
   url: 'http://trackmyimplants.com/trackmy-implants/'
-- title: 'Food and Medicine Reports'
-  url: 'https://medicalfoodcomplaint.com/'
+- title: 'OpenVigilFDA'
+  url: 'http://openvigil.pharmacology.uni-kiel.de/openvigilfda.php'
+- title: 'WIZMED'
+  url: 'http://www.wizmed.com/'
