Fixed api links for tobacco & added news item.

--- a/src/pages/apis/tobacco/problem/_explorers.yaml
+++ b/src/pages/apis/tobacco/problem/_explorers.yaml
@@ -5,7 +5,7 @@ oneRecord:
     - limit to 1 record.
   description:
     - This query searches for all records and asks for a single one.
-  query: 'https://openfda-api.preprod.fda.gov/tobacco/problem.json?limit=1'
+  query: 'https://api.fda.gov/tobacco/problem.json?limit=1'
 dateRange:
   title: Problem reports by submission date
   description:
@@ -13,11 +13,11 @@ dateRange:
     - See the [header fields reference](/apis/tobacco/problem/searchable-fields/) for more about submission_date. Brackets `[ ]` are used to specify a range for date, number, or string fields.
   params:
     - search for all records with submission_date between Jan 01, 2018 and July 23, 2020.
-  query: 'https://openfda-api.preprod.fda.gov/tobacco/problem.json?search=submission_date:[20180101+TO+20200723]'
+  query: 'https://api.fda.gov/tobacco/problem.json?search=submission_date:[20180101+TO+20200723]'
 tobaccoProducts:
   title: Problem reports by tobacco product
   description:
     - The suffix .exact is required by openFDA to count the unique full phrases in the field product_type. Without it, the API will count each word in that field individually—Firm Initiated would be counted as separate values, Firm and Initiated.
   params:
     - search the tobacco products selected by the reporter
-  query: 'https://openfda-api.preprod.fda.gov/tobacco/problem.json?count=tobacco_products.exact'
+  query: 'https://api.fda.gov/tobacco/problem.json?count=tobacco_products.exact'
