--- a/src/pages/about/updates/updates.yaml
+++ b/src/pages/about/updates/updates.yaml
@@ -111,3 +111,7 @@ updates:
     path: /apis/drug/drugsfda/
     date: 2020-08-26
     desc: "Drugs@FDA is now available via openFDA."
+  - title: "New openFDA Dataset - Tobacco Problem Reports"
+    path: /apis/tobacco/problem/
+    date: 2020-09-14
+    desc: "Tobacco Problem Reports is now available via openFDA."
