Date_submitted fix.

--- a/src/pages/apis/tobacco/problem/_explorers.yaml
+++ b/src/pages/apis/tobacco/problem/_explorers.yaml
@@ -10,10 +10,10 @@ dateRange:
   title: Problem reports by submission date
   description:
     - This query searches for all records in a certain date range.
-    - See the [header fields reference](/apis/tobacco/problem/searchable-fields/) for more about submission_date. Brackets `[ ]` are used to specify a range for date, number, or string fields.
+    - See the [header fields reference](/apis/tobacco/problem/searchable-fields/) for more about date_submitted. Brackets `[ ]` are used to specify a range for date, number, or string fields.
   params:
-    - search for all records with submission_date between Jan 01, 2018 and July 23, 2020.
-  query: 'https://api.fda.gov/tobacco/problem.json?search=submission_date:[20180101+TO+20200723]'
+    - search for all records with date_submitted between Jan 01, 2018 and July 23, 2020.
+  query: 'https://api.fda.gov/tobacco/problem.json?search=date_submitted:[20180101+TO+20200723]'
 tobaccoProducts:
   title: Problem reports by tobacco product
   description:
