--- a/src/pages/tools/dataexplorer/_datasets.yaml
+++ b/src/pages/tools/dataexplorer/_datasets.yaml
@@ -10,9 +10,9 @@ names:
         label: Listing of Labels
         searchType: nonLLT
         help_text:
-          - "There are two ways to explore the Animal Drug Labeling data: in a table or visualized in a variety of charts."
+          - "There are two ways to explore the Animal Drug Labeling data: in a table or visualized in a chart."
           - "The default view is the table, which allows you to select which columns you'd like to view and click on individual columns to sort the table by those results. The table displays 25 rows by default, but that number can be modified through a dropdown list. The next and previous buttons allow you to navigate through the all of the available data; you can also directly input what 'page' of data you'd like to view. The final major feature of the table view is the ability to export results in CSV or XLS format."
-          - "The chart view visualizes data in one of two charts: Total Labels, a bar chart which counts the total number of labels for whatever data element you select, and Filter Data by Year, a combination pie chart and bar chart which allow you to filter data by year and product type."
+          - "The chart view visualizes data in a bar chart which counts the total number of labels for whatever data element you select."
           - "Both table and chart allow you to narrow down the results displayed through the use of the filter panel on the left side of the screen. Any number of filters may be applied and each will narrow down the data accordingly. After selecting your desired filters simply press the Apply Filters button in the middle of the screen. If you don't wish to apply those filters, press the Clear All button. After applying filters, they'll be displayed above the table or chart, and can be removed individually or as a whole; removing filters in either of these ways is done automatically without needing to press Apply Filters. Please note that some combinations of specific filters may result in no data matching the total filter criteria and no results being displayed."
         show_collapse_rows_button: false
         columns:
@@ -293,11 +293,11 @@ names:
           field: marketing_category
           options:
             - label: NADA
-              value: nada
+              value: NADA
             - label: ANADA
-              value: anada
+              value: ANADA
             - label: Conditional NADA
-              value: conditional nada
+              value: CONDITIONAL NADA
             - label: MIF
               value: legally marketed unapproved new animal drugs for minor species
             - label: Unapproved Drug
