--- a/src/pages/data/dataexplorer/_datasets.yaml
+++ b/src/pages/data/dataexplorer/_datasets.yaml
@@ -26,9 +26,10 @@ names:
             showDefault: true
             getPreNumbersPart: true
           - Header: Marketing Status
-            accessor: openfda.marketing_status
+            accessor: marketing_status
             show: false
             showDefault: false
+            split: true
           - Header: Labeler Name
             accessor: manufacturer_name
             show: true
@@ -280,7 +281,7 @@ names:
         - label: Marketing Status
           type: checkbox
           query_type: term
-          field: openfda.marketing_status
+          field: marketing_status
           options:
             - label: Marketed
               value: active
