--- a/src/pages/data/downloads/_meta.yaml
+++ b/src/pages/data/downloads/_meta.yaml
@@ -2,5 +2,5 @@ documentTitle: openFDA › Downloads
 label: Endpoint Downloads
 title: Downloads
 description: "This page provides all available endpoint downloads."
-path: /downloads
+path: /data/downloads
 start: 20040101
