System architecture update news item

--- a/src/pages/about/updates/updates.yaml
+++ b/src/pages/about/updates/updates.yaml
@@ -119,3 +119,7 @@ updates:
     path: /data/datadictionary/
     date: 2020-10-10
     desc: "The openFDA data dictionary is now available."
+  - title: "System Architecture Upgrade"
+    path: /about/updates/2020_10_13_system_architecture_upgrade/
+    date: 2020-10-13
+    desc: "The openFDA system architecture has received a significant upgrade."
