--- a/src/pages/apis/other/historicaldocument/_infographics.yaml
+++ b/src/pages/apis/other/historicaldocument/_infographics.yaml
@@ -2,13 +2,28 @@
   short: "Search Term Frequency"
   dataset: Historical Documents
   description:
-    - "Distribution of search term occurrences in the historical documents across years"
+    - "Distribution of search term frequencies in the historical documents by year"
   countParam: "year"
   filters:
     - title: "Press releases mentioning botulism"
-      searchParam: 'search=doc_type:pr+AND+text:botulism'
+      searchParam: 'doc_type:pr+AND+text:botulism'
     - title: "Press releases mentioning HIV/AIDS"
-      searchParam: 'search=doc_type:pr+AND+(text:HIV+OR+text:AIDS)'
+      searchParam: 'doc_type:pr+AND+(text:HIV+OR+text:AIDS)'
     - title: "Talk papers discussing cyclamate"
-      searchParam: 'search=doc_type:talk+AND+text:cyclamate'
+      searchParam: 'doc_type:talk+AND+text:cyclamate'
   type: Line
+- title: "Publications by Year"
+  short: "Publications by Year"
+  dataset: Historical Documents
+  description:
+    - "Number of publications by year"
+  countParam: "year"
+  filters:
+    - title: "Press releases"
+      searchParam: 'doc_type:pr'
+    - title: "Talk papers"
+      searchParam: 'doc_type:talk'
+    - title: "Both"
+      searchParam: 'doc_type:talk+OR+doc_type:pr'
+  type: Donut
+  dateConstraint: false
