--- a/src/constants/fields/devicepma.yaml
+++ b/src/constants/fields/devicepma.yaml
@@ -15,6 +15,7 @@ properties:
         'HO': "General Hospital"
         'HE': "Hematology"
         'IM': "Immunology"
+        'MG': "Medical Genetics"
         'MI': "Microbiology"
         'NE': "Neurology"
         'OB': "Obstetrics/Gynecology"
