--- a/src/constants/fields/master_fields.yaml
+++ b/src/constants/fields/master_fields.yaml
@@ -606,6 +606,7 @@ device:
             'HO': "General Hospital"
             'HE': "Hematology"
             'IM': "Immunology"
+            'MG': "Medical Genetics"
             'MI': "Microbiology"
             'NE': "Neurology"
             'OB': "Obstetrics/Gynecology"
@@ -752,6 +753,7 @@ device:
             'HO': "General Hospital"
             'HE': "Hematology"
             'IM': "Immunology"
+            'MG': "Medical Genetics"
             'MI': "Microbiology"
             'NE': "Neurology"
             'OB': "Obstetrics/Gynecology"
@@ -2713,6 +2715,7 @@ device:
             'HO': "General Hospital"
             'HE': "Hematology"
             'IM': "Immunology"
+            'MG': "Medical Genetics"
             'MI': "Microbiology"
             'NE': "Neurology"
             'OB': "Obstetrics/Gynecology"
