--- a/static/img/fields/deviceclearance.yaml
+++ b/static/img/fields/deviceclearance.yaml
@@ -27,6 +27,7 @@ properties:
         'HO': "General Hospital"
         'HE': "Hematology"
         'IM': "Immunology"
+        'MG': "Medical Genetics"
         'MI': "Microbiology"
         'NE': "Neurology"
         'OB': "Obstetrics/Gynecology"
